--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "photo-grid-viewer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rubpat5.github.io/photo-grid-viewer",
   "dependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
@@ -21,6 +22,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.3.0",
     "prettier": "^3.2.5",
     "vite": "^6.2.5"
   },
@@ -29,7 +31,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
